[EID-1639]  add additional tests