@@ -36,6 +36,7 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 @Testcontainers(disabledWithoutDocker = true)
@@ -50,6 +51,9 @@ class VerificationControllerTests {
     private VerificationManagementRepository verificationManagementRepository;
     @Autowired
     private ApplicationConfiguration applicationConfiguration;
+
+    private final ObjectMapper objectMapper = new ObjectMapper();
+    private final CredentialEmulator emulator =  new CredentialEmulator();;
 
     @Container
     private static final RedisContainer REDIS_CONTAINER = new RedisContainer(
@@ -106,10 +110,9 @@ class VerificationControllerTests {
      */
     @Test
     void shouldSucceedVerifyingCredential() throws Exception {
-        var emulator =  new CredentialEmulator();
 
         var credential = emulator.createVC(
-                Arrays.asList("/type", "/issuer"),
+                List.of("/type", "/issuer"),
                 ExampleJson);
 
         // Fetch the Request Object
@@ -120,10 +123,9 @@ class VerificationControllerTests {
         // Get the Nonce
         JsonObject responseContent = JsonParser.parseString(response.getResponse().getContentAsString()).getAsJsonObject();
         String nonce = responseContent.get("nonce").getAsString();
-        String vpToken = emulator.createVerifiablePresentationUrlEncoded(credential, Arrays.asList("/credentialSubject/hello"), nonce);
+        String vpToken = emulator.createVerifiablePresentationUrlEncoded(credential, List.of("/credentialSubject/hello"), nonce);
         PresentationSubmission presentationSubmission = emulator.getCredentialSubmission();
 
-        ObjectMapper objectMapper = new ObjectMapper();
         String test = objectMapper.writeValueAsString(presentationSubmission);
 
         mock.perform(post(String.format("/request-object/%s/response-data", requestId))
@@ -149,7 +151,7 @@ class VerificationControllerTests {
         managementEntity = verificationManagementRepository.findById(requestId.toString()).orElseThrow();
         Assert.state(managementEntity.getState() == VerificationStatusEnum.SUCCESS,
                 String.format("Expecting state to be failed, but got %s", managementEntity.getState()));
-        assert managementEntity.getWalletResponse().getCredentialSubjectData().contains("world")  == true;
+        assert managementEntity.getWalletResponse().getCredentialSubjectData().contains("world");
 
         // Error that verification is closed should be returned to wallet
         var responseBody = response.getResponse().getContentAsString();
@@ -158,8 +160,49 @@ class VerificationControllerTests {
     }
 
     @Test
+    void shouldFailOnInvalidPresentationSubmissionWithAdditionallyEncodedString() throws Exception {
+
+        var credential = emulator.createVC(List.of("/type", "/issuer"), ExampleJson);
+        var response = mock.perform(get(String.format("/request-object/%s", requestId))).andReturn();
+
+        // Get the Nonce
+        JsonObject responseContent = JsonParser.parseString(response.getResponse().getContentAsString()).getAsJsonObject();
+        String nonce = responseContent.get("nonce").getAsString();
+        String vpToken = emulator.createVerifiablePresentationUrlEncoded(credential, List.of("/credentialSubject/hello"), nonce);
+        PresentationSubmission presentationSubmission = emulator.getCredentialSubmission();
+
+        String presentationSubmissionString = objectMapper.writeValueAsString(presentationSubmission);
+
+        mock.perform(post(String.format("/request-object/%s/response-data", requestId))
+                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
+                        .formField("presentation_submission", Base64.getUrlEncoder().encodeToString(presentationSubmissionString.getBytes(StandardCharsets.UTF_8)))
+                        .formField("vp_token", vpToken))
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("Invalid presentation submission"));
+    }
+
+    @Test
+    void shouldFailOnInvalidPresentationSubmissionWithInvalidJson() throws Exception {
+
+        var credential = emulator.createVC(List.of("/type", "/issuer"), ExampleJson);
+        var response = mock.perform(get(String.format("/request-object/%s", requestId))).andReturn();
+
+        // Get the Nonce
+        JsonObject responseContent = JsonParser.parseString(response.getResponse().getContentAsString()).getAsJsonObject();
+        String nonce = responseContent.get("nonce").getAsString();
+        String vpToken = emulator.createVerifiablePresentationUrlEncoded(credential, List.of("/credentialSubject/hello"), nonce);
+        String presentationSubmission = "{\"id\":\"test_ldp_vc_presentation_definition\",\"definition_id\":\"ldp_vc\",\"descriptor_map\":[{\"id\":\"test_descriptor\",\"format\":\"ldp_vp\",\"path\":\"$.credentialSubject\",\"path_nested\":null";
+
+        mock.perform(post(String.format("/request-object/%s/response-data", requestId))
+                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
+                        .formField("presentation_submission", presentationSubmission)
+                        .formField("vp_token", vpToken))
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("Invalid presentation submission"));
+    }
+
+    @Test
     void shouldFailVerifyingCredentialWrongNonce() throws Exception {
-        var emulator =  new CredentialEmulator();
 
         var credential = emulator.createVC(
                 List.of("/type", "/issuer"),
@@ -170,17 +213,15 @@ class VerificationControllerTests {
                 .andExpect(status().isOk())
                 .andReturn();
 
-        // TODO Get & check Nonce
         String nonce = "wrong_nonce";
-        String vpToken = emulator.createVerifiablePresentationUrlEncoded(credential, Arrays.asList("/credentialSubject/hello"), nonce);
+        String vpToken = emulator.createVerifiablePresentationUrlEncoded(credential, List.of("/credentialSubject/hello"), nonce);
         PresentationSubmission presentationSubmission = emulator.getCredentialSubmission();
 
-        ObjectMapper objectMapper = new ObjectMapper();
-        String test = objectMapper.writeValueAsString(presentationSubmission);
+        String presentationSubmissionString = objectMapper.writeValueAsString(presentationSubmission);
 
         var response = mock.perform(post(String.format("/request-object/%s/response-data", requestId))
                         .formField("vp_token", vpToken)
-                        .formField("presentation_submission", test))
+                        .formField("presentation_submission", presentationSubmissionString))
                 .andExpect(status().isBadRequest())
                 .andReturn();
 
@@ -206,7 +247,7 @@ class VerificationControllerTests {
         // Resending after failure
         response = mock.perform(post(String.format("/request-object/%s/response-data", requestId))
                         .param("vp_token", vpToken)
-                        .formField("presentation_submission", test))
+                        .formField("presentation_submission", presentationSubmissionString))
                 .andExpect(status().isBadRequest())
                 .andReturn();
 
